Bug fix: added B tag CSS for dark mode

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
     margin: 20px 0 20px 0;
 }
 
-.Dark-Mode h1 {
+.Dark-Mode h1, p, B {
     color: #FFFFFF;
 }
 
